--- a/src/components/TableUser.scss
+++ b/src/components/TableUser.scss
@@ -9,7 +9,7 @@
 }
 
 .add-new {
-  display: flex;
+  // display: flex;
   align-items: center;
   justify-content: space-between;
 
@@ -21,4 +21,12 @@
       padding: 0 2px;
     }
   }
+}
+
+.customize-table {
+  overflow-x: auto;
+}
+
+.pagination {
+  justify-content: center;
 }
